# transcribe

./: .env-sample  .gitignore  1-audio  2-audio_processed  3-output  README.md  colors.py  install.bat  pyproject.toml  requirements.txt  transcribe.bat  transcribe.py  transcribe.spec  watcher.py
