# ───────────────────────────────────────────────────────────────────
# 	📌 
# 	This project uses Poetry for dependency & venv management.
# 	Please install Poetry: `pip install poetry`
#	  Then install dependencies: `poetry install` 
#	  
# ───────────────────────────────────────────────────────────────────

[project]
name = "transcribe"
version = "0.1.0"
description = "Transcribes audio files to text"
authors = [{ name = "oneezy", email = "justinoneill2007@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
transcribe = "transcribe:main"
watcher = "watcher:main"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
whisperx = ">=3.3.2,<4.0.0"
tiktoken = ">=0.9.0,<1.0.0"
tabulate = ">=0.9.0,<1.0.0"
watchdog = ">=6.0.0,<7.0.0"
torch = { url = "https://download.pytorch.org/whl/nightly/cu128/torch-2.8.0.dev20250429%2Bcu128-cp312-cp312-win_amd64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/nightly/cu128/torchaudio-2.6.0.dev20250430%2Bcu128-cp312-cp312-win_amd64.whl" }
faster-whisper = "1.1.0"
ctranslate2 = "^4.6.0"
pyannote-audio = "3.3.2"
nltk = "^3.9.1"
pandas = "^2.2.3"

[tool.poetry-auto-export]
output = "requirements.txt"
without_hashes = true
without = ["dev"]
